--- a/templates/index.html
+++ b/templates/index.html
@@ -24,36 +24,54 @@
             height: 60px;
             width: 100%;
             flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between; /* Logo left, Visualizer center, Controls right */
+            padding: 0 20px;
+            box-sizing: border-box;
         }
 
         #logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
             font-size: 24px;
             font-weight: bold;
             letter-spacing: 2px;
-            z-index: 10;
             text-transform: uppercase;
             text-shadow: 0 0 5px #0f0;
+            width: 200px; /* Fixed width to allow centering visualizer */
         }
         
+        #visualizer-container {
+            width: 300px;
+            height: 50px;
+            border: 1px solid #050;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+
+        #controls-wrapper {
+             display: flex;
+             align-items: center;
+             width: 350px; /* Fixed width to balance logo */
+             justify-content: flex-end;
+             position: relative;
+        }
+
         #controls {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            z-index: 10;
+            /* reset absolute */
         }
 
         #latency-panel {
-            position: absolute;
-            top: 60px;
-            right: 20px;
             font-size: 14px;
             color: #0f0;
-            z-index: 10;
             text-shadow: 0 0 2px #0f0;
-            font-family: 'Courier New', Courier, monospace;
+            margin-left: 20px;
+            white-space: nowrap;
         }
 
         button {
@@ -168,12 +186,19 @@
 <body>
     <div id="top-bar">
         <div id="logo">Mr.Jiang</div>
-        <div id="controls">
-            <button id="btn-play">[ RECEIVE STREAM ]</button>
-            <button id="btn-stop">[ STOP STREAM ]</button>
+        
+        <div id="visualizer-container">
+            <canvas id="visualizer"></canvas>
         </div>
-        <div id="latency-panel">
-            LATENCY: <span id="latency-val">--</span> ms
+
+        <div id="controls-wrapper">
+            <div id="controls">
+                <button id="btn-play">[ RECEIVE STREAM ]</button>
+                <button id="btn-stop">[ STOP STREAM ]</button>
+            </div>
+            <div id="latency-panel">
+                LATENCY: <span id="latency-val">--</span> ms
+            </div>
         </div>
     </div>
     
