--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         #visualizer-container {
             width: 300px;
             height: 50px;
-            border: 1px solid #050;
+            border: 1px solid transparent;
             display: flex;
             justify-content: center;
             align-items: center;
